<resources>
    <string name="app_name">WeatherApp</string>
    <string name="City">City</string>
    <string name="temperature">temperature</string>
    <string name="Remove">Remove</string>
    <string name="city">City</string>
    <string name="null_error">You must enter a city name</string>
    <string name="title_activity_nav_main">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Weather</string>
    <string name="nav_header_subtitle">est. 2018</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="entercity">Enter City Name</string>
    <string name="About">About</string>
    <string name="AddCity">Add a City</string>
    <string name="Details">Details</string>
    <string name="city_name_goes_here">City Name Goes HEre</string>
    <string name="temperature_goes_here">Temperature goes here</string>
    <string name="Coordinates">Coordinates</string>
    <string name="Visibility">Visibility</string>
    <string name="Winds">Winds</string>
    <string name="metric_units">metric</string>
    <string name="Error">Error: </string>
    <string name="tvTemperature">Temperature: </string>
    <string name="tvCity">City: </string>
    <string name="tvCoordinates">Coordinates: </string>
    <string name="tvVisibility">Visibility: </string>
    <string name="tvWinds">Winds: </string>
    <string name="pressure">Pressure: </string>
    <string name="MainDescription">MainDescription: </string>
    <string name="temperatureError">The temperature is not available at this time</string>
    <string name="PressureError">The pressure is not available at this time</string>
    <string name="CoordinatesError">The Coordinates are not available at this time</string>
    <string name="VisibilityError">The visbility is not available at this time</string>
    <string name="WindsError">The wind is not available at this time</string>
    <string name="IconError">The icon is not available at this time</string>
</resources>
