<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvWDCity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/city_name_goes_here"/>

    <TextView
        android:id="@+id/tvWDTemperature"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/temperature_goes_here"/>
    <TextView
        android:id="@+id/tvWDCoord"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/Coordinates"/>
    <TextView
        android:id="@+id/tvWDVisibility"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/Visibility"/>
    <TextView
        android:id="@+id/tvWDWinds"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_weight="2"
        android:text="@string/Winds"/>


</LinearLayout>